# flow-rs

./: Cargo.toml  DESIGN.md  LICENSE  README.md  deny.toml
.config/: nextest.toml
.github/workflows/: build.yml  publish.yml
benches/: benchmarks.rs
examples/: java.rs
src/: action.rs  actions.rs  executor.rs  flow.rs  io.rs  job.rs  job_ordering.rs  lib.rs  listener.rs  pool.rs  promise.rs  sync.rs  task_ordering.rs
src/actions/: helpers.rs  traits.rs
src/backend/: disjointed.rs  flow_backend.rs  flow_listener_shim.rs  funnel.rs  job.rs  mod.rs  overlap_checking.rs  recv_promise.rs  reusable.rs  task.rs  task_ordering.rs
src/io/: disjoint.rs
src/job_ordering/: graph_traversal.rs  stepped.rs
src/pool/: inner_thread_pool.rs  mod.rs  settings.rs
src/sync/: lazy.rs  once_lock.rs  promise.rs
src/sync/pool/: inner_thread_pool.rs  mod.rs  settings.rs
src/task_ordering/: graph_traversal.rs  stepped.rs
tests/: gradle_like.rs  test_concurrency.rs  test_empty_flow.rs  test_gradle_like_default.rs  test_gradle_like_graph.rs  test_gradle_like_stepping.rs  test_number_flow.rs
